Change link from /tafifs.html to /tarifs.html in index.html. The link was updated to fix a typo and ensure consistency with the correct file name.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="p-4 space-y-2 bg-gray-100 rounded-lg shadow-md">
         <a href="https://t.me/genera4_bot" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Бот</a>
-        <a href="/tafifs.html" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Тарифы</a>
+        <a href="/tarifs.html" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Тарифы</a>
         <a href="/oferta.html" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Оферта</a>
     </div>
 </body>
