Add hero image and update content in index.html, and add contact email for refund in oferta.html.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,33 @@
     <title>генерач</title>
 </head>
 <body>
-    <div class="p-4 space-y-2 bg-gray-100 rounded-lg shadow-md">
-        <a href="https://t.me/genera4_bot" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Бот</a>
-        <a href="/tarifs.html" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Тарифы</a>
-        <a href="/oferta.html" class="block px-4 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded">Оферта</a>
+<div class="relative bg-cover h-[500px] bg-top rounded-lg shadow-md text-left p-8" style="background-image: url('/hero1.jpeg')">
+    <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col justify-center items-start p-8 space-y-4">
+        <h1 class="text-2xl font-bold mb-4 text-white">🌟 Генера4 - Ваш искусственный художник в Телеграме! 🌟</h1>
+
+        <p class="text-white mb-2">
+            🎨 Устали искать идеальную картинку? Позвольте <span class="font-semibold">Генера4</span> создать её для вас!
+        </p>
+        <p class="text-white mb-2">
+            ✅ Введите свой запрос, и наш бот в мгновение ока превратит его в великолепное визуальное изображение.
+        </p>
+        <p class="text-white mb-2">
+            🚀 Присоединяйтесь к революции в графическом дизайне с помощью искусственного интеллекта!
+        </p>
+        <p class="text-white mb-4">
+            💰 Выберите подходящий для вас
+            <a href="/tarifs.html" class="font-semibold text-blue-400 hover:text-blue-500">
+                тарифный план
+            </a>
+        </p>
+
+        <a target="_blank" href="https://t.me/genera4_bot" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded-full shadow-md font-semibold self-center">
+            Начните сейчас!
+        </a>
     </div>
+</div>
 </body>
+<footer class="fixed bottom-0 w-full mt-8 p-4 bg-gray-200">
+    <a href="/oferta.html" class="text-xs text-indigo-600 hover:text-indigo-700">Оферта</a>
+</footer>
 </html>
