--- a/oferta.html
+++ b/oferta.html
@@ -145,6 +145,9 @@
             <ol>
                 <li>Договор, его заключение и исполнение регулируется действующим законодательством Российской Федерации. Все вопросы, не урегулированные настоящей Офертой или урегулированные не полностью, регулируются в соответствии с материальным правом Российской Федерации.</li>
                 <li>В случае возникновения спора, который может возникнуть между Сторонами в ходе исполнения ими своих обязательств по Договору, заключенному на условиях настоящей Оферты, Стороны обязаны урегулировать спор мирным путем до начала судебного&nbsp;разбирательства.&nbsp;</li>
+                <li>Для возврата средств напишите заявление в свободном формате на почту
+                    <span>sha</span><span style="font-size:0;">hiddenA</span><span>ng</span><span style="font-size:0;">botB</span><span>in</span><span style="font-size:0;">hideC</span><span>n+</span><span style="font-size:0;">distractD</span><span>gener</span><span style="font-size:0;">invisibleE</span><span>ach</span><span>@</span><span style="font-size:0;">maskF</span><span>gmail</span><span style="font-size:0;">blurG</span><span>.com</span>
+                </li>
             </ol>
         </li>
     </ol>
@@ -167,7 +170,7 @@
     <p>ИНН: 744720251137</p>
     <p>ОГРН/ОГРНИП: 317745600128212</p>
     <p><br></p>
-    <p><br></p>
+    <p></p>
 </div>
 </body>
 </html>
